Hecho el menu, situado el footer, los botones principales y el textarea del carrito de la compra

--- a/index.html
+++ b/index.html
@@ -13,23 +13,36 @@
         <ul class="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Quienes Somos</a></li>
-            <li><a href="#">Que Hacemos</a></li>
+            <li><a href="#">Herramientas</a></li>
+              <ul>
+                <!-- Esto esta oculto es para un submenu para
+                la calculadora y demas -->
+                <li><a href="#">Calculadora</a></li>
+                <li><a href="#">Calendario</a></li>
+              </ul>
             <li><a href="#">Clientes</a></li>
             <li><a href="#">Club</a></li>
         </ul>
     </nav>
     <!-- Fin de barra de navegacion superior -->
     <!-- Comienzo del eslogan y eso -->
+    <nav class="segundo">
       <nav class="eslogan">
         <h1>App_SupeR</h1>
       </nav>
     <!-- Final del eslogan y eso -->
-    <!-- Comienzo de las categorias -->
-    <nav class="categorias">
-      <a class="boton_" id="charcuteria" href="https://vinkula.com">Charcuteria</a>
-      <a class="boton_" id="pescaderia" href="https://vinkula.com">Pescaderia</a>
-      <a class="boton_" id="fruteria" href="https://vinkula.com">Fruteria</a>
+    <nav class="carrito_compra">
+      <h4>Carrito de la compra</h4>
+      <textarea name="carrito" id="carrito" cols="23" rows="10"></textarea>
     </nav>
+    <!-- Comienzo de las categorias -->
+  </nav>
+    <nav class="categorias">
+      <a class="botones_generales" href="https://vinkula.com">Charcuteria</a>
+      <a class="botones_generales" href="https://vinkula.com">Pescaderia</a>
+      <a class="botones_generales" href="https://vinkula.com">Fruteria</a>
+    </nav>
+
     <!-- Final de las categorias -->
   </body>
 
