Encaminada la visualizacion de la nueva pagina, falta formatear correctamente las tablas

--- a/charcuteria.html
+++ b/charcuteria.html
@@ -28,21 +28,51 @@
     <!-- Comienzo del eslogan y eso -->
     <nav class="segundo">
       <nav class="productos">
-        <h1>App_SupeR</h1>
+        <h1>Productos Disponibles en la charcuteria</h1>
+
+        <table>
+          <tr class="principal">
+            <td>Producto</td>
+            <td>Precio</td>
+            <td>Cantidad (kg)</td>
+            <td>Añadir al carrito</td>
+          </tr>
+          <tr>
+            <td>Pelluga de pollo</td>
+            <td>3,46 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+          <tr>
+            <td>Chuleta de cerdo</td>
+            <td>2,55 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+          <tr>
+            <td>Carne mechada res</td>
+            <td>4,99 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+        </table>
+
       </nav>
     <!-- Final del eslogan y eso -->
     <nav class="carrito_compra">
       <h4>Carrito de la compra</h4>
       <textarea name="carrito" id="carrito" cols="23" rows="10"></textarea>
     </nav>
-    <!-- Comienzo de las categorias -->
   </nav>
-    <nav class="categorias">
-      <a class="botones_generales" href="./charcuteria.html">Charcuteria</a>
-      <a class="botones_generales" href="./pescaderia.html">Pescaderia</a>
-      <a class="botones_generales" href="./fruteria.html">Fruteria</a>
-    </nav>
+  <!-- Comienzo de las categorias -->
+  <nav class="categorias">
+    <a class="botones_generales" href="./charcuteria.html">Charcuteria</a>
+    <a class="botones_generales" href="./pescaderia.html">Pescaderia</a>
+    <a class="botones_generales" href="./fruteria.html">Fruteria</a>
+  </nav>
+    <nav>
 
+    </nav>
     <!-- Final de las categorias -->
   </body>
 
