--- a/fruteria.html
+++ b/fruteria.html
@@ -28,7 +28,35 @@
     <!-- Comienzo del eslogan y eso -->
     <nav class="segundo">
       <nav class="productos">
-        <h1>App_SupeR</h1>
+        <h1>Productos Disponibles en la fruteria</h1>
+
+        <table>
+          <tr class="principal">
+            <td>Producto</td>
+            <td>Precio</td>
+            <td>Cantidad (kg)</td>
+            <td>Añadir al carrito</td>
+          </tr>
+          <tr>
+            <td>Piña</td>
+            <td>3,77 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+          <tr>
+            <td>Manzana Golden</td>
+            <td>1,85 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+          <tr>
+            <td>Naranja zumo</td>
+            <td>1,05 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+        </table>
+
       </nav>
     <!-- Final del eslogan y eso -->
     <nav class="carrito_compra">
@@ -37,12 +65,11 @@
     </nav>
     <!-- Comienzo de las categorias -->
   </nav>
-    <nav class="categorias">
-      <a class="botones_generales" href="./charcuteria.html">Charcuteria</a>
-      <a class="botones_generales" href="./pescaderia.html">Pescaderia</a>
-      <a class="botones_generales" href="./fruteria.html">Fruteria</a>
-    </nav>
-
+  <nav class="categorias">
+    <a class="botones_generales" href="./charcuteria.html">Charcuteria</a>
+    <a class="botones_generales" href="./pescaderia.html">Pescaderia</a>
+    <a class="botones_generales" href="./fruteria.html">Fruteria</a>
+  </nav>
     <!-- Final de las categorias -->
   </body>
 
