--- a/pescaderia.html
+++ b/pescaderia.html
@@ -28,7 +28,34 @@
     <!-- Comienzo del eslogan y eso -->
     <nav class="segundo">
       <nav class="productos">
-        <h1>App_SupeR</h1>
+        <h1>Productos Disponibles en la charcuteria</h1>
+
+        <table>
+          <tr class="principal">
+            <td>Producto</td>
+            <td>Precio</td>
+            <td>Cantidad (kg)</td>
+            <td>Añadir al carrito</td>
+          </tr>
+          <tr>
+            <td>Gamba fresca</td>
+            <td>11,26 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+          <tr>
+            <td>Pulpo gallego</td>
+            <td>9,55 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+          <tr>
+            <td>Dorada grande</td>
+            <td>6,35 €/Kg</td>
+            <td><input type="text"></td>
+            <td><a class="button" href="#">Añadir</a></td>
+          </tr>
+        </table>
       </nav>
     <!-- Final del eslogan y eso -->
     <nav class="carrito_compra">
@@ -37,11 +64,11 @@
     </nav>
     <!-- Comienzo de las categorias -->
   </nav>
-    <nav class="categorias">
-      <a class="botones_generales" href="./charcuteria.html">Charcuteria</a>
-      <a class="botones_generales" href="./pescaderia.html">Pescaderia</a>
-      <a class="botones_generales" href="./fruteria.html">Fruteria</a>
-    </nav>
+  <nav class="categorias">
+    <a class="botones_generales" href="./charcuteria.html">Charcuteria</a>
+    <a class="botones_generales" href="./pescaderia.html">Pescaderia</a>
+    <a class="botones_generales" href="./fruteria.html">Fruteria</a>
+  </nav>
 
     <!-- Final de las categorias -->
   </body>
