Continuando el formateo

--- a/charcuteria.html
+++ b/charcuteria.html
@@ -41,19 +41,19 @@
             <td>Pelluga de pollo</td>
             <td>3,46 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
           <tr>
             <td>Chuleta de cerdo</td>
             <td>2,55 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
           <tr>
             <td>Carne mechada res</td>
             <td>4,99 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
         </table>
 
