--- a/fruteria.html
+++ b/fruteria.html
@@ -41,19 +41,19 @@
             <td>Piña</td>
             <td>3,77 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
           <tr>
             <td>Manzana Golden</td>
             <td>1,85 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
           <tr>
             <td>Naranja zumo</td>
             <td>1,05 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
         </table>
 
