--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <nav class="segundo">
       <nav class="productos">
         <h1>App_SupeR</h1>
+        <h2>El lugar online a través del cual podrá realizar sus compras<h2>
+        <h2>Todo sin abandonar la comodidad de su casa.<h2>
       </nav>
     <!-- Final del eslogan y eso -->
     <nav class="carrito_compra">
