--- a/pescaderia.html
+++ b/pescaderia.html
@@ -41,19 +41,19 @@
             <td>Gamba fresca</td>
             <td>11,26 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
           <tr>
             <td>Pulpo gallego</td>
             <td>9,55 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
           <tr>
             <td>Dorada grande</td>
             <td>6,35 €/Kg</td>
             <td><input type="text"></td>
-            <td><a class="button" href="#">Añadir</a></td>
+            <td><a class="enlace_boton" href="#">Añadir</a></td>
           </tr>
         </table>
       </nav>
